--- a/order.html
+++ b/order.html
@@ -55,8 +55,8 @@
             $('#btn-checkout').on('click', () => {
                 var STRIPE_KEY = process.env.STRIPE_API_KEY
                 // Here Goes your Stripe Logic
-                successUrl: 'http:abc.com/order_success.html'
-                cancelUrl: 'http:abc.com/order.html'
+                successUrl: 'httpsd:abc.com/order_success.html'
+                cancelUrl: 'https:abc.com/order.html'
             })
         })
   
